<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">理财通</string>
    <string name="action_settings">Settings</string>
    <string name="title">家庭理财通</string>
    <string name="tv_login">账号</string>
    <string name="tv_password">密码</string>
    <string name="pleace_input_username">请输入账号</string>
    <string name="pleace_input_password">请输入密码</string>
    <string name="bt_login">登录</string>
    <string name="tv_exit">退出</string>
    <string name="tv_consume_money">消费金额</string>
    <string name="tv_consume_detail">消费说明</string>
    <string name="bt_consume_post">提交</string>
    <string name="bt_updata">修改</string>
    <string name="bt_delete">删除</string>
    <string name="bt_updata_consume">修改</string>
    <string name="bt_delete_consume">删除</string>
    <string name="add_income">新增收入</string>
    <string name="add_consume">新增支出</string>
    <string name="updata_delete_income">收入管理</string>
    <string name="updata_delete_consume">支出管理</string>
    <string name="query_income">我的收入</string>
    <string name="query_consume">我的支出</string>
    <string name="tv_income">收入金额</string>
    <string name="tv_consume">消费金额</string>
    <string name="tv_consumer">消费人名</string>
    <string name="tv_income_detail">收入说明</string>
    <string name="tv_income_categories">收入类别</string>
    <string name="tv_consume_categories">消费类别</string>
    <string name="tv_income_time">付款时间</string>
    <string name="tv_consume_time">消费时间</string>
    <string name="tv_payer">付款方名</string>

    <string-array name="categories">
        <item>工资</item>
        <item>股票</item>
        <item>彩票</item>
    </string-array>
    <string-array name="consume_categories">
        <item>饮食支出</item>
        <item>日常支出</item>
        <item>娱乐支出</item>
    </string-array>

</resources>