<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp"
    >

<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/add_income"
    android:textSize="30dp"
    android:gravity="center_vertical"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:layout_marginTop="100dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_income" />

            <EditText
                android:id="@+id/et_income_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        
             <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_payer" />

            <EditText
                android:id="@+id/et_payer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_income_categories" />

            <Spinner
                android:id="@+id/spinner_income_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:entries="@array/categories"
                />
        </LinearLayout>
           <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_income_time" />

            <EditText
                android:id="@+id/et_income_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_income_detail" />

            <EditText
                android:id="@+id/et_income_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        
        <Button 
            android:id="@+id/bt_income_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_consume_post"
            />
    </LinearLayout>

</LinearLayout>